dovecot/dovecot-pigeonhole/tests/extensions/include/errors/global-namespace.sieve
require "variables";
require "include";

# Invalid namespace
set "globl.var" "frop";

# Sub-namespace
set "global.env.0" "12";

# Invalid variable name
set "global.12" "porf";


